--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
+dj-database-url==0.5.0
 Django==1.11
 django-bootstrap3==11.0.0
 django-categories==1.6
+django-heroku==0.3.1
 django-js-asset==1.1.0
 django-mptt==0.9.1
+gunicorn==19.9.0
 Pillow==5.2.0
 psycopg2==2.7.5
 pytz==2018.5
 six==1.11.0
 unicode-slugify==0.1.3
 Unidecode==1.0.22
+whitenoise==4.1
+python-decouple==3.1
+config==0.3.9
